[package]
name = "adud"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lifecycle = { workspace = true }
service = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
